// Copyright 2018 Xcalar, Inc. All rights reserved.
//
// No use, or distribution, of this source code is permitted in any form or
// means without a valid, written license agreement with Xcalar, Inc.
// Please refer to the included "COPYING" file for terms and conditions
// regarding the use and redistribution of this software.
//

syntax = "proto3";

import "google/protobuf/empty.proto";

package xcalar.compute.localtypes.Echo;

message EchoResponse {
    string echoed = 1;
};

message EchoRequest {
    string echo = 1;
};

message EchoErrorRequest {
    string error = 1;
};

service Echo {
    rpc EchoMessage (EchoRequest) returns (EchoResponse);
    rpc EchoErrorMessage (EchoErrorRequest) returns (google.protobuf.Empty);
};
